--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -4,12 +4,25 @@
   <div class="row">
     <div id="sidebar" class="col-xs-3">
       <h1>filters</h1>
-      <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>    </div>
+
+      year
+      <div id="year" class="filter-slider"></div>
+
+    </div>
     <div id="main-content" class="col-xs-9">
       <h1>videos</h1>
 
-      <iframe src="https://www.youtube.com/embed/8TeeJvcBdLA?list=PLpVYKOdz7C8M3aQkPfq7SNUj_yX-1b11D" frameborder="0" allowfullscreen class="video"></iframe>
+      <iframe src="https://www.youtube.com/embed/8TeeJvcBdLA" frameborder="0" allowfullscreen class="video"></iframe>
 
+      <iframe src="https://www.youtube.com/embed/EYKO1za5mX0" frameborder="0" allowfullscreen class="video_small"></iframe>
+
+      <iframe src="https://www.youtube.com/embed/3fy4cqWMhyI" frameborder="0" allowfullscreen class="video_small"></iframe>
+
+      <iframe src="https://www.youtube.com/embed/3fy4cqWMhyI" frameborder="0" allowfullscreen class="video_small"></iframe>
+
+      <iframe src="https://www.youtube.com/embed/3fy4cqWMhyI" frameborder="0" allowfullscreen class="video_small"></iframe>
+
+      <iframe src="https://www.youtube.com/embed/3fy4cqWMhyI" frameborder="0" allowfullscreen class="video_small"></iframe>
     </div>
   </div>
 </div>
