thumbnail with title

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
 
 .video {
   width: 560px;
@@ -20,4 +24,30 @@
 .filter-slider {
   width: 200px;
 }
+ul.thumbnails {
+  list-style-type: none;
+  li {
+    width: 440px;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: top;
+
+    .thumbnail_image {
+      width: 400px;
+      height: 220px;
+      overflow: hidden;
+    }
+    .thumbnail_title_eng {
+      color: #aaaaaa;
+    }
+    img {
+      position: relative;
+      width: 400px;
+      top: -40px
+    }
+
+  }
+
+}
+
 
