--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -10,39 +10,13 @@
 
     </div>
 
-    <!--<script>-->
-
-      <!-- -->
-////      FUNCTION TO GET AND AUTO PLAY YOUTUBE VIDEO FROM DATATAG
-//      function autoPlayYouTubeModal() {
-//        console.log("i am javascript")
-//        var trigger = $("body").find('[data-toggle="modal"]');
-//        trigger.click(function () {
-//          console.log("you clicked video")
-//          var theModal = $(this).data("target"),
-//              videoSRC = $(this).attr("data-theVideo"),
-//              videoSRCauto = videoSRC + "?autoplay=1";
-//          $(theModal + ' iframe').attr('src', videoSRCauto);
-//
-//          $(theModal + ' button.close').click(function () {
-//            $(theModal + ' iframe').attr('src', videoSRC);
-//          });
-//
-//          $('.modal').click(function () {
-//            $(theModal + ' iframe').attr('src', videoSRC);
-//          });
-//        });
-//      }
-    <!--</script>-->
-
-
     <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
             <div>
-              <iframe width=100% height="350" src="https://www.youtube.com/watch?v=ASO_zypdnsQ"></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/ASO_zypdnsQ" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -54,8 +28,8 @@
         <% @videos.each do |video| %>
           <li>
             <div class="thumbnail_image">
-              <a href="<%= video.url %>" data-toggle="modal"
-                 data-target="#basicModal" data-theVideo="<%= video.url %>"><%= image_tag video.thumbnail %></a>
+              <a href="#" data-toggle="modal"
+                 data-target="#basicModal"><%= image_tag video.thumbnail %></a>
             </div>
             <div class="thumbnail_title">
               <%= video.title_korean %>
