play each videos successfully

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -16,7 +16,7 @@
           <div class="modal-body">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
             <div>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/ASO_zypdnsQ" frameborder="0" allowfullscreen></iframe>
+              <iframe id="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -26,11 +26,13 @@
     <div id="main-content" class="col-xs-9">
       <ul class="thumbnails">
         <% @videos.each do |video| %>
-          <li>
+          <li class="each_thumbnail">
+            <a href="https://www.youtube.com/embed/<%= video.youtube_id %>" data-toggle="modal" data-target="#basicModal">
             <div class="thumbnail_image">
-              <a href="#" data-toggle="modal"
-                 data-target="#basicModal"><%= image_tag video.thumbnail %></a>
+
+              <%= image_tag video.thumbnail %>
             </div>
+
             <div class="thumbnail_title">
               <%= video.title_korean %>
             </div>
@@ -38,7 +40,9 @@
               <div class="thumbnail_title_eng">
                 <%= video.title_english %>
               </div>
+            </a>
             <% end %>
+
           </li>
         <% end %>
       </ul>
@@ -46,3 +50,13 @@
     </div>
   </div>
 </div>
+
+
+<script type="text/javascript">
+$(document).ready(function(){
+ $("a").on('click', function(){
+  var url= $(this).attr("href")
+    $("#iframe").attr('src', url);
+     })
+  });
+</script>
