add duration, dimension, definition, licensedContent, caption in migration, show.erb, and _form

--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -68,6 +68,32 @@
     <%= f.label :youtube_views %><br>
     <%= f.number_field :youtube_views %>
   </div>
+
+  <div class="field">
+    <%= f.label :definition %><br>
+    <%= f.text_field :definition %>
+  </div>
+
+  <div class="field">
+    <%= f.label :duration %><br>
+    <%= f.text_field :duration %>
+  </div>
+
+  <div class="field">
+    <%= f.label :dimension %><br>
+    <%= f.text_field :dimension %>
+  </div>
+
+  <div class="field">
+    <%= f.label :caption %><br>
+    <%= f.text_field :caption %>
+  </div>
+
+  <div class="field">
+    <%= f.label :licensed_content %><br>
+    <%= f.check_box :licensed_content %>
+  </div>
+
   <div class="field">
     <%= f.label :upvotes %><br>
     <%= f.number_field :upvotes %>
