--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -66,6 +66,37 @@
 </p>
 
 <p>
+  <strong>Youtube_user_id:</strong>
+  <%= @video.youtube_user_id %>
+</p>
+
+<p>
+  <strong>definition:</strong>
+  <%= @video.definition %>
+</p>
+
+<p>
+  <strong>duration:</strong>
+  <%= @video.duration %>
+</p>
+
+<p>
+  <strong>dimension:</strong>
+  <%= @video.dimension %>
+</p>
+
+<p>
+  <strong>caption:</strong>
+  <%= @video.caption %>
+</p>
+
+<p>
+  <strong>licensed_content:</strong>
+  <%= @video.licensed_content %>
+</p>
+
+
+<p>
   <strong>Upvotes:</strong>
   <%= @video.upvotes %>
 </p>
