add sorting function based on youtube views, upvotes, and upload date

--- a/app/views/videos/by_upload_date_desc.erb
+++ b/app/views/videos/by_upload_date_desc.erb
@@ -1,6 +1,6 @@
 <% @videos.each do |video| %>
   <%= video.title_korean %><br>
-  youtube views: <%= video.youtube_views %><br><br>
+  upload dates: <%= video.upload_date %><br><br>
 <% end %>
 
 <%= link_to 'Back', videos_path %>
