--- a/app/views/videos/by_upvotes_asc.erb
+++ b/app/views/videos/by_upvotes_asc.erb
@@ -1,6 +1,6 @@
 <% @videos.each do |video| %>
   <%= video.title_korean %><br>
-  youtube views: <%= video.youtube_views %><br><br>
+  upvotes: <%= video.upvotes %><br><br>
 <% end %>
 
 <%= link_to 'Back', videos_path %>
