--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -8,6 +8,14 @@
       year
       <div id="year" class="filter-slider"></div>
 
+
+      <div class="upvoteasc"><button>Upvote(asc)</button></div>
+      <div class="upvotedesc"><button>Upvote(desc)</button></div>
+      <div class="youtubeasc"><button>Youtube_views(asc)</button></div>
+      <div class="youtubedesc"><button>Youtube_views(desc)</button></div>
+      <div class="uploadasc"><button>Upload_date(asc)</button></div>
+      <div class="uploaddesc"><button>Upload_date(desc)</button></div>
+
     </div>
 
     <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
@@ -26,24 +34,7 @@
     <div id="main-content" class="col-xs-9">
       <ul class="thumbnails">
         <% @videos.each do |video| %>
-          <li class="each_thumbnail">
-            <a href="https://www.youtube.com/embed/<%= video.youtube_id %>" data-toggle="modal" data-target="#basicModal" class="hook--showmodal">
-            <div class="thumbnail_image">
-
-              <%= image_tag video.thumbnail %>
-            </div>
-
-            <div class="thumbnail_title">
-              <%= video.title_korean %>
-            </div>
-            <% if video.title_english %>
-              <div class="thumbnail_title_eng">
-                <%= video.title_english %>
-              </div>
-            </a>
-            <% end %>
-
-          </li>
+          <%= render 'each_video' %>
         <% end %>
       </ul>
 
