_filter_form.html.erb in progress

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -19,13 +19,8 @@
 
       <hr>
 
+      <%= render 'filter_form' %>
 
-      <div class="filter"> <h1>Filters</h1><br>
-        Field: <input type="text" name="field" id="field"><br>
-        From: <input type="number" name="from" id="from"><br>
-        To: <input type="number" name="to" id="to"><br>
-        <input type="submit" value="submit" id="submit">
-      </div>
     </div>
 
     <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
