--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -90,6 +90,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :type %><br>
+    <%= f.text_field :type %>
+  </div>
+
+  <div class="field">
     <%= f.label :licensed_content %><br>
     <%= f.check_box :licensed_content %>
   </div>
