--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -91,6 +91,11 @@
 </p>
 
 <p>
+  <strong>type:</strong>
+  <%= @video.type %>
+</p>
+
+<p>
   <strong>licensed_content:</strong>
   <%= @video.licensed_content %>
 </p>
