implemented categorization, sorting and filtering

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -10,12 +10,14 @@
 
 
       <h1>Sorting</h1>
-      <div class="upvoteasc"><button>Upvote(asc)</button></div>
-      <div class="upvotedesc"><button>Upvote(desc)</button></div>
-      <div class="youtubeasc"><button>Youtube_views(asc)</button></div>
-      <div class="youtubedesc"><button>Youtube_views(desc)</button></div>
-      <div class="uploadasc"><button>Upload_date(asc)</button></div>
-      <div class="uploaddesc"><button>Upload_date(desc)</button></div>
+      <button class="btn btn-default youtubedesc">Youtube Views DESC</button><br>
+      <button class="btn btn-default youtubeasc">Youtube Views ASC</button><br>
+      <button class="btn btn-default upvotedesc">Upvote DESC</button><br>
+      <button class="btn btn-default upvoteasc">Upvote ASC</button><br>
+      <button class="btn btn-default uploaddesc">Upload Date DESC</button><br>
+      <button class="btn btn-default uploadasc">Upload Date ASC</button><br>
+      <button class="btn btn-default ratingdesc">Rating DESC</button><br>
+      <button class="btn btn-default ratingasc">Rating ASC</button><br>
 
       <hr>
 
