--- a/app/views/videos/_filter_form.html.erb
+++ b/app/views/videos/_filter_form.html.erb
@@ -1,5 +1,18 @@
 <%= form_tag do %>
 
+<div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+    Category
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Music Video</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Teaser</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Dance Practice</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Live Performance</a></li>
+  </ul>
+</div>
+
   <div class="filter"> <h3>Hotness</h3><br>
     min: <input type="number" name="hotness[min]" ><br>
     max: <input type="number" name="hotness[max]"><br>
