--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -26,8 +26,13 @@ body {
 
 }
 
-.upvoteasc {
+.number_input {
+  width: 40px;
+}
 
+.filter_title {
+  display: inline-block;
+  width: 140px;
 }
 
 
