switch type to category, add random value to hotness, cheesiness, and english_percentage

--- a/app/views/videos/_filter_form.html.erb
+++ b/app/views/videos/_filter_form.html.erb
@@ -37,7 +37,7 @@
 
   <div class="filter">
 
-    Type: <input type="text" name="type">    <br>
+    Type: <input type="text" name="category">    <br>
     Duration: <input type="text" name="duration">   <br>
     dimension: <input type="text" name="dimension">  <br>
     caption: <input type="text" name="caption">  <br>
