--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -90,8 +90,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.label :category %><br>
+    <%= f.text_field :category %>
   </div>
 
   <div class="field">
