--- a/app/views/videos/edit.html.erb
+++ b/app/views/videos/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @video %> |
-<%= link_to 'Back', videos_path %>
+<div class="btn btn-primary">
+<%= link_to 'Show', @video %></div> |
+<div class="btn btn-primary"><%= link_to 'Back', videos_path %></div>
